<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="10dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/movie_image_cv"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/movie_title_cv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/movie_image_cv"
            android:layout_alignRight="@id/movie_image_cv"
            android:layout_alignBottom="@id/movie_image_cv"
            android:layout_margin="16dp"

            android:background="#65000000"
            android:gravity="end"

            android:lines="1"
            android:padding="8dp"

            android:text="@string/movie_title_string"
            android:textColor="#fff"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/movie_rate_cv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/movie_image_cv"
            android:layout_alignLeft="@id/movie_image_cv"
            android:layout_alignTop="@id/movie_image_cv"

            android:layout_margin="16dp"
            android:background="#65000000"

            android:gravity="end"
            android:padding="8dp"

            android:text="@string/rate_ex_string"
            android:textColor="#fff"

            android:textSize="25sp" />

        <LinearLayout
            android:id="@+id/data_container_ll_cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/movie_image_cv"

            android:orientation="vertical">

            <TextView
                android:id="@+id/movie_plot_cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:ellipsize="end"
                android:lines="3"
                android:text="@string/lorem_30_string" />

            <TextView
                android:id="@+id/movie_runtime_cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="end"
                android:text="@string/runtime_ex_string" />

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>