<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/image_main_content_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"
            />

        <TextView
            android:id="@+id/movie_title_main_content_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/image_main_content_fragment"
            android:layout_alignRight="@id/image_main_content_fragment"
            android:layout_alignBottom="@id/image_main_content_fragment"
            android:layout_margin="16dp"

            android:background="#65000000"
            android:gravity="end"

            android:lines="1"
            android:padding="8dp"

            android:text="@string/movie_title_string"
            android:textColor="#fff"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/movie_rate_main_content_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/image_main_content_fragment"
            android:layout_alignLeft="@id/image_main_content_fragment"
            android:layout_alignTop="@id/image_main_content_fragment"

            android:layout_margin="16dp"
            android:background="#65000000"

            android:gravity="end"
            android:padding="8dp"

            android:text="@string/rate_ex_string"
            android:textColor="#fff"

            android:textSize="25sp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/plot_main_content_fragment"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_marginBottom="8dp"

                android:text="@string/lorem_30_string"
                android:textSize="18sp"
                />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:layout_marginBottom="4dp"

                    android:text="Año:"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/released_main_content_fragment"

                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:layout_marginBottom="4dp"

                    android:text="@string/n_a_value"
                    android:textSize="18sp"
                    />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:layout_marginBottom="4dp"

                    android:text="Genero:"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/genre_main_content_fragment"

                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:layout_marginBottom="4dp"

                    android:text="@string/n_a_value"
                    android:textSize="18sp"
                    />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:layout_marginBottom="4dp"

                    android:text="Duración:"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/runtime_main_content_fragment"

                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:layout_marginBottom="4dp"

                    android:text="@string/n_a_value"
                    android:textSize="18sp"
                    />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:layout_marginBottom="4dp"

                    android:text="Director:"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/director_main_content_fragment"

                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:layout_marginBottom="4dp"

                    android:text="@string/n_a_value"
                    android:textSize="18sp"
                    />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:layout_marginBottom="4dp"

                    android:text="Actores:"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/actors_main_content_fragment"

                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:layout_marginBottom="4dp"

                    android:text="@string/n_a_value"
                    android:textSize="18sp"
                    />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>